--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,27 @@
-- uses: actions/checkout@v2
+name: TEST
 
-- name: Setup Python version
-  uses: actions/setup-python@v2
-  with:
-  python-version: 3.8
+on: push
 
-- name: Create and start virtual environment
-  run: |
-    python3 -m venv venv
-    source venv/bin/activate
-    
-- name: Install dependencies
-  run: pip install -r requirements.txt
-  
-- name: Run tests
-  run: pytest
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup Python version
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Create and start virtual environment
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Run tests
+      run: pytest
