--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ Flask-Migrate==4.0.4
 flask-restx==1.1.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.5
+greenlet==2.0.2
+gunicorn==21.2.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -38,7 +40,7 @@ psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
-PyJWT==2.7.0
+PyJWT==2.8.0
 pyproject-api==1.5.3
 pyrsistent==0.19.3
 pytest==7.4.0
