--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cffi==1.15.1
 chardet==5.1.0
 click==8.1.3
 colorama==0.4.6
-cryptography==41.0.1
+cryptography==41.0.4
 distlib==0.3.6
 filelock==3.12.2
 flake8==6.0.0
@@ -41,7 +41,7 @@ psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
-PyJWT==2.8.0
+PyJWT[crypto]==2.8.0
 pyproject-api==1.5.3
 pyrsistent==0.19.3
 pytest==7.4.0
