--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 alembic==1.11.1
+amqp==5.1.1
 aniso8601==9.0.1
 ansicolors==1.1.8
+APScheduler==3.10.4
 attrs==23.1.0
 bcrypt==4.0.1
+billiard==4.1.0
 black==23.7.0
 blinker==1.6.2
 cachetools==5.3.1
+celery==5.3.4
 cffi==1.15.1
 chardet==5.1.0
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 cryptography==41.0.4
 distlib==0.3.6
 filelock==3.12.2
 flake8==6.0.0
 Flask==2.3.2
+Flask-APScheduler==1.13.0
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 flask-marshmallow==0.15.0
@@ -28,6 +36,7 @@ iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
+kombu==5.3.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 marshmallow==3.19.0
@@ -37,6 +46,7 @@ packaging==23.1
 pathspec==0.11.1
 platformdirs==3.8.1
 pluggy==1.2.0
+prompt-toolkit==3.0.39
 psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pycparser==2.21
@@ -48,11 +58,17 @@ pytest==7.4.0
 pytest-black==0.3.12
 pytest-flake8==1.1.1
 pytest-flask==1.2.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+six==1.16.0
 SQLAlchemy==2.0.17
 toml==0.10.2
 tox==4.6.4
 typing_extensions==4.7.0
+tzdata==2023.3
+tzlocal==5.1
+vine==5.0.0
 virtualenv==20.23.1
+wcwidth==0.2.8
 Werkzeug==2.3.6
