--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ black==23.7.0
 blinker==1.6.2
 cachetools==5.3.1
 celery==5.3.4
+certifi==2023.7.22
 cffi==1.15.1
 chardet==5.1.0
+charset-normalizer==3.3.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -19,6 +21,7 @@ click-repl==0.3.0
 colorama==0.4.6
 cryptography==41.0.4
 distlib==0.3.6
+exponent-server-sdk==2.0.0
 filelock==3.12.2
 flake8==6.0.0
 Flask==2.3.2
@@ -32,6 +35,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 gunicorn==21.2.0
+idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -61,6 +65,7 @@ pytest-flask==1.2.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.17
 toml==0.10.2
@@ -68,6 +73,7 @@ tox==4.6.4
 typing_extensions==4.7.0
 tzdata==2023.3
 tzlocal==5.1
+urllib3==2.0.6
 vine==5.0.0
 virtualenv==20.23.1
 wcwidth==0.2.8
